Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -76,6 +76,6 @@ steps:
   inputs:
     azureSubscription: '$(Subscription)'
     appType: 'functionApp'
-    appName: '$(functionAppName)'
+    appName: 'funcapprouter2'
     package: '$(build.artifactstagingdirectory)/**/*.zip'
     deploymentMethod: 'runFromPackage'
