Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,7 +45,7 @@ steps:
       $Url = "$(RouterUri)"
       $Body = @{    
         "Name" = "$(AppName)";
-        "ResourceGroup" = "$rg-(AppName)";
+        "ResourceGroup" = "rg-$(AppName)";
         "FunctionAppName" = "$(AppName)";
         "Region" = "eastus";
         "AppInsightsLocation" = "$(AppInsightsLocation)";
