Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -76,7 +76,6 @@ steps:
   inputs:
     azureSubscription: '$(Subscription)'
     appType: 'functionApp'
-    # appName: '$(functionAppName)'
-    appName: 'funcapprouter2'
+    appName: '$(functionAppName)'
     package: '$(build.artifactstagingdirectory)/**/*.zip'
     deploymentMethod: 'runFromPackage'
