--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,7 +50,7 @@ steps:
         "Region" = "eastus";
         "AppInsightsLocation" = "$(AppInsightsLocation)";
         "Version" = $csproj.Project.PropertyGroup.Version;
-        "Runtime" = $(Runtime);
+        "runtime" = $(Runtime);
       }
       $response = try {Invoke-RestMethod -Method 'Post' -Uri $Url -Body ($Body|ConvertTo-Json) } catch { $_.Exception.Response}
       $statusQueryUri = $response.statusQueryGetUri
